Checking bionic's cmake version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ language: cpp
 before_install:
     - sudo apt-get -y install xorg-dev
 script:
+    - cmake --version
     - cmake .
     - cmake --build .
