--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: true
 language: cpp
 before_install:
     - sudo apt-get -y install xorg-dev
+    - git submodule init
+    - git submodule update
 script:
     - cmake .
     - cmake --build .
