--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
-dist: bionic
-sudo: true
+jobs:
+    include:
+        - os: linux
+          dist: bionic
+        - os: osx
+
 language: cpp
+
+addons:
+    apt:
+        packages:
+            - xorg-dev
+
 before_install:
-    - sudo apt-get -y install xorg-dev
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install xcode; fi
     - git submodule init
     - git submodule update
 script:
