Renamed OSX to macOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jobs:
           name: Ubuntu 18.04
           dist: bionic
         - os: osx
-          name: OSX
+          name: macOS
 
 language: cpp
 
