--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 os: Visual Studio 2017
 
 build_script:
+    - git submodule init
+    - git submodule update
     - md build
     - cd build
     - cmake ..
