--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,3 +133,12 @@ set(STAGE_NM "1.Getting_Started")
 set(V_PATH "${SRC_DIR}1.Getting_Started/3.3.vertex.glsl")
 set(F_PATH "${SRC_DIR}1.Getting_Started/3.3.fragment.glsl")
 buildFileWithShader(${SOURCES} ${TARGET_NM} ${STAGE_NM} ${V_PATH} ${F_PATH})
+
+# Shaders Exercise_Qn2
+# Source files
+set(SOURCES "${SRC_DIR}/1.Getting_Started/3.4.Exercise_Qn2.cpp")
+set(TARGET_NM "3.4.Exercise_Qn2")
+set(STAGE_NM "1.Getting_Started")
+set(V_PATH "${SRC_DIR}1.Getting_Started/3.4.vertex.glsl")
+set(F_PATH "${SRC_DIR}1.Getting_Started/3.4.fragment.glsl")
+buildFileWithShader(${SOURCES} ${TARGET_NM} ${STAGE_NM} ${V_PATH} ${F_PATH})
