--- a/source/1.Getting_Started/3.4.Exercise_Qn2.cpp.in
+++ b/source/1.Getting_Started/3.4.Exercise_Qn2.cpp.in
@@ -27,7 +27,7 @@ int main() {
     // glfwWindowHint(GLFW_OPENGL_FORWARD_COMPAT, GL_TRUE);
 
     GLFWwindow* window =
-            glfwCreateWindow(800, 600, "Hello Triangle", NULL, NULL);
+            glfwCreateWindow(800, 600, "Offset", NULL, NULL);
     if (window == NULL) {
         std::cerr << "Failed to create GLFW window" << std::endl;
         glfwTerminate();
