Loading two textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,21 +159,14 @@ add_library("stb_image" "${STB_DIR}/stb_image.cpp")
 target_include_directories("stb_image" PRIVATE "${STB_DIR}")
 
 
+# ======================================================================================
+
 function(buildFileWithTexture)
     list(GET ARGV 0 SRCS)
     list(GET ARGV 1 PROJ_NAME)
     list(GET ARGV 2 STAGE_NM)
     list(GET ARGV 3 V_PATH)
     list(GET ARGV 4 F_PATH)
-
-    set (VERTEX_PATH "\"${V_PATH}\"")
-    set (FRAGMENT_PATH "\"${F_PATH}\"")
-    set (IMAGE_PATH "\"${I_PATH}\"")
-
-    configure_file (
-        ${SRCS}
-        "${CMAKE_CURRENT_BINARY_DIR}/src/${STAGE_NM}/${PROJ_NAME}.cpp" @ONLY
-    )
 
     set(SRCS "${CMAKE_CURRENT_BINARY_DIR}/src/${STAGE_NM}/${PROJ_NAME}.cpp")
 
@@ -196,12 +189,34 @@ function(buildFileWithTexture)
     target_link_libraries(${PROJ_NAME} "stb_image")
 endFunction()
 
-# Textures
+# 4. TEXTURES
+# Textured Colorful Rectangle
 # Source files
 set(SOURCES "${SRC_DIR}/1.Getting_Started/4.0.Textures/1.Textures.cpp")
-set(TARGET_NM "4.0.Textures")
+set(TARGET_NM "4.1.Textures")
 set(STAGE_NM "1.Getting_Started/4.0.Textures/")
-set(V_PATH "${SRC_DIR}1.Getting_Started/4.0.Textures/1.vertex.glsl")
-set(F_PATH "${SRC_DIR}1.Getting_Started/4.0.Textures/1.fragment.glsl")
-set(I_PATH "${CMAKE_CURRENT_SOURCE_DIR}/resources/textures/container.jpg")
+set(VERTEX_PATH "\"${SRC_DIR}1.Getting_Started/4.0.Textures/1.vertex.glsl\"")
+set(FRAGMENT_PATH "\"${SRC_DIR}1.Getting_Started/4.0.Textures/1.fragment.glsl\"")
+set(IMAGE_PATH "\"${CMAKE_CURRENT_SOURCE_DIR}/resources/textures/container.jpg\"")
+configure_file (
+    ${SOURCES}
+    "${CMAKE_CURRENT_BINARY_DIR}/src/${STAGE_NM}/${TARGET_NM}.cpp" @ONLY
+)
+buildFileWithTexture(${SOURCES} ${TARGET_NM} ${STAGE_NM} ${V_PATH} ${F_PATH})
+
+# Texture Units
+# Source files
+set(SOURCES "${SRC_DIR}/1.Getting_Started/4.0.Textures/2.Texture_Units.cpp")
+set(TARGET_NM "4.2.Texture_Units")
+set(STAGE_NM "1.Getting_Started/4.0.Textures/")
+set(VERTEX_PATH "${SRC_DIR}1.Getting_Started/4.0.Textures/2.vertex.glsl")
+set(FRAGMENT_PATH "${SRC_DIR}1.Getting_Started/4.0.Textures/2.fragment.glsl")
+set(CONTAINER "${CMAKE_CURRENT_SOURCE_DIR}/resources/textures/container.jpg")
+set(SMILEY "${CMAKE_CURRENT_SOURCE_DIR}/resources/textures/awesomeface.png")
+
+configure_file (
+    ${SOURCES}
+    "${CMAKE_CURRENT_BINARY_DIR}/src/${STAGE_NM}/${TARGET_NM}.cpp" @ONLY
+)
+
 buildFileWithTexture(${SOURCES} ${TARGET_NM} ${STAGE_NM} ${V_PATH} ${F_PATH})
