Showing compile warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,12 @@ function(buildFile)
     target_include_directories(${PROJ_NAME} PRIVATE "${SRC_DIR}")
     set_property(TARGET ${PROJ_NAME} PROPERTY CXX_STANDARD 11)
 
+    if(MSVC)
+        target_compile_options(${PROJ_NAME} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic)
+    endif()
+
     target_link_libraries(${PROJ_NAME} "glfw" "${GLFW_LIBRARIES}")
     target_include_directories(${PROJ_NAME} PRIVATE "${GLFW_DIR}/include")
     target_compile_definitions(${PROJ_NAME} PRIVATE "GLFW_INCLUDE_NONE")
@@ -116,6 +122,12 @@ function(buildFileWithShader)
     target_include_directories(${PROJ_NAME} PRIVATE "${SRC_DIR}")
     set_property(TARGET ${PROJ_NAME} PROPERTY CXX_STANDARD 11)
 
+    if(MSVC)
+        target_compile_options(${PROJ_NAME} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic)
+    endif()
+
     target_link_libraries(${PROJ_NAME} "glfw" "${GLFW_LIBRARIES}")
     target_include_directories(${PROJ_NAME} PRIVATE "${GLFW_DIR}/include")
     target_compile_definitions(${PROJ_NAME} PRIVATE "GLFW_INCLUDE_NONE")
@@ -191,6 +203,12 @@ function(buildFileWithTexture)
     target_include_directories(${TARGET_NM} PRIVATE "${SRC_DIR}")
     set_property(TARGET ${TARGET_NM} PROPERTY CXX_STANDARD 11)
 
+    if(MSVC)
+        target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+    endif()
+
     target_link_libraries(${TARGET_NM} "glfw" "${GLFW_LIBRARIES}")
     target_include_directories(${TARGET_NM} PRIVATE "${GLFW_DIR}/include")
     target_compile_definitions(${TARGET_NM} PRIVATE "GLFW_INCLUDE_NONE")
@@ -239,6 +257,11 @@ function(buildFileWithGLM)
     target_include_directories(${TARGET_NM} PRIVATE "${SRC_DIR}")
     set_property(TARGET ${TARGET_NM} PROPERTY CXX_STANDARD 11)
  
+    if(MSVC)
+        target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+    endif()
 
     target_link_libraries(${TARGET_NM} "glfw" "${GLFW_LIBRARIES}")
     target_include_directories(${TARGET_NM} PRIVATE "${GLFW_DIR}/include")
@@ -301,6 +324,12 @@ function(buildFileWithNoise)
     add_executable(${TARGET_NM} ${SRCS})
     target_include_directories(${TARGET_NM} PRIVATE "${SRC_DIR}")
     set_property(TARGET ${TARGET_NM} PROPERTY CXX_STANDARD 11)
+
+    if(MSVC)
+        target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+    endif()
  
 
     target_link_libraries(${TARGET_NM} "glfw" "${GLFW_LIBRARIES}")
