--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ function(buildFile)
     if(MSVC)
         target_compile_options(${PROJ_NAME} PRIVATE /W4 /WX)
     else()
-        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic)
+        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
 
     target_link_libraries(${PROJ_NAME} "glfw" "${GLFW_LIBRARIES}")
@@ -125,7 +125,7 @@ function(buildFileWithShader)
     if(MSVC)
         target_compile_options(${PROJ_NAME} PRIVATE /W4 /WX)
     else()
-        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic)
+        target_compile_options(${PROJ_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
 
     target_link_libraries(${PROJ_NAME} "glfw" "${GLFW_LIBRARIES}")
@@ -206,7 +206,7 @@ function(buildFileWithTexture)
     if(MSVC)
         target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
     else()
-        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
 
     target_link_libraries(${TARGET_NM} "glfw" "${GLFW_LIBRARIES}")
@@ -260,7 +260,7 @@ function(buildFileWithGLM)
     if(MSVC)
         target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
     else()
-        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
 
     target_link_libraries(${TARGET_NM} "glfw" "${GLFW_LIBRARIES}")
@@ -328,7 +328,7 @@ function(buildFileWithNoise)
     if(MSVC)
         target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
     else()
-        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic)
+        target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
  
 
