--- a/source/1.Getting_Started/3.Shaders/6.Exercise_Qn3.cpp.in
+++ b/source/1.Getting_Started/3.Shaders/6.Exercise_Qn3.cpp.in
@@ -7,7 +7,7 @@
 #define VERTEX_PATH @VERTEX_PATH@
 #define FRAGMENT_PATH @FRAGMENT_PATH@
 
-void framebuffer_size_callback(GLFWwindow* window, int width, int height) {
+void framebuffer_size_callback(__attribute__((unused))GLFWwindow *window, int width, int height) {
     glViewport(0, 0, width, height);
 }
 
